[metadata]
name = leelalib
version = 1.0.0
description = Leela library of shared utilities.
long_description = file: README.md
long_description_content_type = text/markdown
url = git@github.com:leela-ai/leelalib.git

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
